--- a/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/es.yml
+++ b/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/es.yml
@@ -29,7 +29,7 @@ implement:
   - |-
     📚  ahora, en la clase 🛸  `SpriteRenderer`, define:
     **_createSprite(id)**:
-      **->** devuelve una nueva instancia de `Sprite`, leyendo el índice OAM `id`
+      **->** retorna una nueva instancia de `Sprite`, leyendo el índice OAM `id`
       (¡recuerda agregar 1 a la coordenada Y!)
   responses:
   - ¿por qué debería agregar 1 a la coordenada Y? ➕ [addone]
