--- a/src/data/levels/05b_PPU/14_Sprites 2-6 - Evaluation/chat/es.yml
+++ b/src/data/levels/05b_PPU/14_Sprites 2-6 - Evaluation/chat/es.yml
@@ -37,7 +37,7 @@ ok:
           **->** de lo contrario:
             **->** asigna ```javascript this.ppu.registers.ppuStatus.spriteOverflow = 1```
             **->** detiene el bucle
-      **->** devuelve `sprites` en orden inverso
+      **->** retorna `sprites` en orden inverso
   - 📚  además, necesitas reiniciar `spriteOverflow` a 0 en ~scanline=-1; cycle=1~, como lo hiciste anteriormente con `isInVBlankInterval`
   - hazlo en `PPU::_onPreLine()`
   responses:
